Fix level alignment

--- a/CheckersWebsite/wwwroot/css/bundle.css
+++ b/CheckersWebsite/wwwroot/css/bundle.css
@@ -7015,3 +7015,7 @@ input[type="radio"].toggle:checked + label {
     margin-bottom: 15px;
     color: red;
 }
+
+.input-group-addon label {
+    margin-bottom: 0;
+}
